--- a/Com.Apphb.Cia.Presentation/Com.Apphb.Cia.Presentation.csproj
+++ b/Com.Apphb.Cia.Presentation/Com.Apphb.Cia.Presentation.csproj
@@ -204,6 +204,7 @@
     <Content Include="app\pages\contact.html" />
     <Content Include="app\pages\home.html" />
     <Content Include="app\pages\info.html" />
+    <Content Include="app\pages\recipes.html" />
     <Content Include="app\pages\rules.html" />
     <Content Include="app\pages\users.html" />
     <Content Include="app\script.js" />
@@ -217,6 +218,13 @@
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\grid.css" />
     <Content Include="Content\Images\mod_bg.jpg" />
+    <Content Include="Content\Images\Recipes\palta.jpg" />
+    <Content Include="Content\Images\Users\dado.jpg" />
+    <Content Include="Content\Images\Users\dani.jpg" />
+    <Content Include="Content\Images\Users\inzo.jpg" />
+    <Content Include="Content\Images\Users\metal.jpg" />
+    <Content Include="Content\Images\Users\montra.jpg" />
+    <Content Include="Content\Images\Users\phil.jpg" />
     <Content Include="Content\theme.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
