--- a/Com.Apphb.Cia.Presentation/Com.Apphb.Cia.Presentation.csproj
+++ b/Com.Apphb.Cia.Presentation/Com.Apphb.Cia.Presentation.csproj
@@ -218,6 +218,7 @@
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\grid.css" />
     <Content Include="Content\Images\mod_bg.jpg" />
+    <Content Include="Content\Images\News\JU13950.jpg" />
     <Content Include="Content\Images\Recipes\palta.jpg" />
     <Content Include="Content\Images\Users\dado.jpg" />
     <Content Include="Content\Images\Users\dani.jpg" />
